--- a/index.html
+++ b/index.html
@@ -2,24 +2,18 @@
 <html lang>
 <head>
     <meta charset="UTF-8">
- <title>Resume Likusya</title>
-</head>
+ <title>Resume Marsik</title>
+<link href="styles.css" rel="stylesheet"/>
 <body>
-  <table cellspacing="15">
-<tr>
-  <td>
-    <img src="avatar.jpeg" width="200" alt="фото"/>
-  </td>
-  <td>
-    <h1>Марсик</h1> 
-    <p><em><strong>Любимая</strong> наглая морда</em> </p> 
-    <p>Люблю поспать и покушать</p>
   
-  </td>
-</tr>
+  <div class="info">
+    <img src="avatar.jpeg" alt="фото"
+    class="avatar" />
+    <h1>Марсик</h1> 
+    <p><strong>Любимая</strong> наглая морда</p> 
+    <p>Люблю поспать и покушать</p>
+  </div>
 
-  </table>
- 
   <hr>
 
   <h2>Мои соц.сети</h2>
